Working copy.  Fixed remove skills - Added some styling elements - Adding a chart - Chart has no data